--- a/slides/index.slim
+++ b/slides/index.slim
@@ -1,3 +1,22 @@
 h2.center ザキ研紹介2018
-h3.center 北九州市立大学 山崎 進
-img.icon src="resources/images/ZACKY-3000.jpg"
+h3.center
+  span.heading 北九州市立大学 山崎 進
+  img.heading src="resources/images/ZACKY-3000.jpg"
+
+h3.left テーマとキーワード一覧
+ol
+  li
+    span.nonsplit【アプリ開発，文系的な活動】
+    span.nonsplit.strong 地域課題を解決するアプリ開発・デザイン
+  li
+    span.nonsplit【プログラミング】
+    span.nonsplit.strong プログラミング言語処理系の研究・開発
+  li
+    span.nonsplit 【プログラミング】
+    span.nonsplit.strong オープンソースソフトウェアの開発
+  li
+    span.nonsplit 【AI】
+    span.nonsplit.strong AI技術の社会実装
+  li
+    span.nonsplit 【教育】
+    span.nonsplit.strong 若者の潜在能力を最大限引き出す教育
