--- a/slides/index-1.slim
+++ b/slides/index-1.slim
@@ -1,9 +1,9 @@
-h2.center ザキ研紹介2018
-h3.center
-  span.heading 北九州市立大学 山崎 進
+h2.center
+  span.heading ザキ研紹介2018
   img.heading src="resources/images/ZACKY-3000.jpg"
 
-h3.left テーマとキーワード一覧
+h3.center テーマとキーワード一覧
+
 ol
   li
     span.nonsplit【アプリ開発，文系的な活動】
