--- a/slides/index-2.slim
+++ b/slides/index-2.slim
@@ -1,9 +1,9 @@
-h2.center ザキ研紹介2018
-h3.center
-  span.heading 北九州市立大学 山崎 進
+h2.center
+  span.heading ザキ研紹介2018
   img.heading src="resources/images/ZACKY-3000.jpg"
 
-h3.left ザキ研で想定している人材像とキャリアパス
+h3.center ザキ研で想定している人材像とキャリアパス
+
 ol
   li
     span.nonsplit.strong プログラマ志望
