--- a/slides/index-2.slim
+++ b/slides/index-2.slim
@@ -20,6 +20,8 @@ ol
   li
     span.nonsplit.strong バンドが楽しい
   li
+    span.nonsplit.strong 創作活動が楽しい
+  li
     span.nonsplit.strong 地域の役に立ちたい  
   li
     span.nonsplit.strong 自分の未来に希望を持てない
