--- a/slides/index-3.slim
+++ b/slides/index-3.slim
@@ -2,7 +2,7 @@ h2.center
   span.heading ザキ研紹介2018
   img.heading src="resources/images/ZACKY-3000.jpg"
 
-h3.center テーマとキーワード一覧
+h3.center テーマとキーワード
 
 ol
   li
