exchange index-3 and index-4

--- a/slides/index-3.slim
+++ b/slides/index-3.slim
@@ -2,21 +2,6 @@ h2.center
   span.heading ザキ研紹介2018
   img.heading src="resources/images/ZACKY-3000.jpg"
 
-h3.center テーマとキーワード
+h3.center ザキ研マインド
 
-ol
-  li
-    span.nonsplit【アプリ開発，文系的な活動】
-    span.nonsplit.strong 地域課題を解決するアプリ開発・デザイン
-  li
-    span.nonsplit【プログラミング】
-    span.nonsplit.strong プログラミング言語処理系の研究・開発
-  li
-    span.nonsplit 【プログラミング】
-    span.nonsplit.strong オープンソースソフトウェアの開発
-  li
-    span.nonsplit 【AI】
-    span.nonsplit.strong AI技術の社会実装
-  li
-    span.nonsplit 【教育】
-    span.nonsplit.strong 若者の潜在能力を最大限引き出す教育
+img.img src="resources/images/ZackyLab-Mind.png"
