create for programmer

--- a/slides/for-programmer-1.slim
+++ b/slides/for-programmer-1.slim
@@ -1,24 +1,12 @@
-h2 プログラマ志望のみなさんへ
+h2 プログラマ志望のみなさんへ 
+h3 育てたいプログラマ像〜多能工プログラマ 
 ul
+  li フルスタックエンジニアと近い，けどもっと守備範囲が広いイメージ 
+  li.strong ザキ研マインドを持つプログラマ 
+  li.strong 役割の枠を超える，業界の枠を超える，知識の枠を超える 
+  li 「わかんないよーといいながら，ずかずかと未開の地に分けいっちゃうプログラマ」 
+  li.strong プログラミングを主な活動にする 
   li
-    span 世の中にはいろんなプログラミング言語がある:&nbsp;
-    span.nonsplit Ruby, Python, Swift, C#, ...
-  li
-    span もし
-    span.strong 「究極言語」
-    span があるとしたら，習得してみたいと思わない？
-  li
-    span それが
-    span.strong Elixir(エリクサー)
-    span だ！
-    ul
-      li 不老不死の霊薬に由来。ファイナルファンタジーでおなじみの名前ですね
-  li
-    span Elixirの特徴はこうだ！
-    ul
-      li.strong 超ハイパフォーマンスで高い生産性
-      li.strong ウェブ環境 Phoenix で爆速ウェブサイトが作れる
-      li.strong これからザキ研でシステムプログラミング応用を研究するぞ！
-  li
-    span 詳しく話を聞きたい人は
-    span.strong ザキ研ブースへGo! 
+    span.strong × &nbsp; 
+    span 設計だけして実装を丸投げするようなエンジニア
+  li.strong プログラミングを通して問題を解決することを仕事にする 
