update for programmer

--- a/slides/for-programmer-2.slim
+++ b/slides/for-programmer-2.slim
@@ -3,7 +3,7 @@ h3 アプリを開発したいみなさんへ
 ul
   li
     span.strong アプリを作ってみたい！:&nbsp;
-    span.nonsplit モバイル，ウェブ，ゲーム，VR/AR, AI, ...
+    span.nonsplit モバイル，ウェブ，ゲーム，VR/AR，AI，メディアアート，音楽...
   li
     span ザキ研では次のようなアプリ開発をしています！
     ul
