update & add for programmer

--- a/slides/for-programmer-4.slim
+++ b/slides/for-programmer-4.slim
@@ -1,22 +1,27 @@
-h2 プログラマ志望のみなさんへ 
-h3 入門にあたっての課題 
+h2
+  span.heading プログラマ志望のみなさんへ &nbsp;
+  img.heading src="resources/images/Official_Elixir_logo.png"
 ul
-  li もちろんプログラミングできる必要があります
-  li 大事なこと
-  ul
-    li
-      span.strong なぜそのようにプログラミングしたのか，
-      span 説明できること
-    li.strong 向上心
-  li 次の課題を用意しました。少なくとも1つ取り組んで提出してください
-  ol
-    li 今までに開発したプログラムを提出してください
+  li
+    span 世の中にはいろんなプログラミング言語がある:&nbsp;
+    span.nonsplit Ruby, Python, Swift, C#, ...
+  li
+    span もし
+    span.strong 「究極言語」
+    span があるとしたら，習得してみたいと思わない？
+  li
+    span それが
+    span.strong Elixir(エリクサー)
+    span だ！
     ul
-      li 自作のものでもプログラミング演習でもOK
-      li 意図を説明するドキュメント・コメントも書いてください
-    li 別途指定する専門書を借りて読み，感想・疑問等を述べてください。
-    li
-      span.nonsplit
-        a href="https://elixirschool.com/ja/" Elixir School
-        span にしたがって，Elixir のプログラムを書いてください。
-      span.nonsplit その後，簡単なものでいいので何かプログラムを自作してください。
+      li 不老不死の霊薬に由来。ファイナルファンタジーでおなじみの名前
+  li
+    span Elixirの特徴はこうだ！
+    ul
+      li.strong 超ハイパフォーマンス
+      ul
+        li 複数のCPUをたやすく使い倒す！
+        li 一緒に処理系を作って，GPUやFPGAを駆動してみないか？
+      li.strong 高いレスポンス性能
+      li.strong 高い生産性
+      li.strong → ウェブサイト構築ソフト Phoenix で爆速ウェブサイトを爆速で作る！
