--- a/slides/for-programmer-2.slim
+++ b/slides/for-programmer-2.slim
@@ -1,25 +1,13 @@
-h2 プログラマ志望のみなさんへ
-h3 アプリを開発したいみなさんへ
+h2 プログラマ志望のみなさんへ 
+h3 育てたいプログラマ像〜起業家マインドを持つエンジニア 
 ul
+  li.strong プログラミングを通して問題を解決することを仕事にする
   li
-    span.strong アプリを作ってみたい！:&nbsp;
-    span.nonsplit モバイル，ウェブ，ゲーム，VR/AR，AI，メディアアート，音楽...
+  	span そのためにはプログラミングだけでなく
+  	span.strong 社会のことを知ることも大事
+  li.strong ザキ研マインドを持つプログラマ 
+  li.strong 役割の枠を超える，業界の枠を超える，知識の枠を超える 
+  li.strong 起業家のようにチャレンジングであり，リスクを判断する
   li
-    span ザキ研では次のようなアプリ開発をしています！
-    ul
-      li
-        span.strong 地域課題の解決につながるアプリ&nbsp;
-        a href="https://zacky1972.github.io/KK-SHiFT/" KK-SHiFT
-      li.strong 主に県内企業等からの依頼による受託開発
-      ul
-        li.strong 共同研究型インターンシップ
-        li インターンシップ + アルバイト + 共同研究
-      li.strong 就職活動に強い！ IT企業に強い！ 地元就職に強い！
-
-p
-  span.nonsplit
-    img.icon src="resources/images/Petlian-icon.png"
-    img.icon src="resources/images/KamoKamo-icon.png"
-    img.icon src="resources/images/agri-IoT-icon.png"
-    img.icon src="resources/images/KanmonGG-icon.jpg"
-    img.icon src="resources/images/Gakufubako-icon.jpg"
+  	span ザキ研で
+  	span.strong リスクを安全に学ぼう！
