--- a/slides/for-programmer-3.slim
+++ b/slides/for-programmer-3.slim
@@ -1,27 +1,25 @@
-h2
-  span.heading プログラマ志望のみなさんへ &nbsp;
-  img.heading src="resources/images/Official_Elixir_logo.png"
+h2 プログラマ志望のみなさんへ
+h3 アプリを開発したいみなさんへ
 ul
   li
-    span 世の中にはいろんなプログラミング言語がある:&nbsp;
-    span.nonsplit Ruby, Python, Swift, C#, ...
+    span.strong アプリを作ってみたい！:&nbsp;
+    span.nonsplit モバイル，ウェブ，ゲーム，VR/AR，AI，メディアアート，音楽...
   li
-    span もし
-    span.strong 「究極言語」
-    span があるとしたら，習得してみたいと思わない？
-  li
-    span それが
-    span.strong Elixir(エリクサー)
-    span だ！
+    span ザキ研では次のようなアプリ開発をしています！
     ul
-      li 不老不死の霊薬に由来。ファイナルファンタジーでおなじみの名前
-  li
-    span Elixirの特徴はこうだ！
-    ul
-      li.strong 超ハイパフォーマンス
+      li
+        span.strong 地域課題の解決につながるアプリ&nbsp;
+        a href="https://zacky1972.github.io/KK-SHiFT/" KK-SHiFT
+      li.strong 主に県内企業等からの依頼による受託開発
       ul
-        li 複数のCPUを使い倒す！
-        li 一緒に処理系を作って，GPUやFPGAを駆動してみないか？
-      li.strong 高いレスポンス性能
-      li.strong 高い生産性
-      li.strong → ウェブサイト構築ソフト Phoenix で爆速ウェブサイトを爆速で作る！
+        li.strong 共同研究型インターンシップ
+        li インターンシップ + アルバイト + 共同研究
+      li.strong 就職活動に強い！ IT企業に強い！ 地元就職に強い！
+
+p
+  span.nonsplit
+    img.icon src="resources/images/Petlian-icon.png"
+    img.icon src="resources/images/KamoKamo-icon.png"
+    img.icon src="resources/images/agri-IoT-icon.png"
+    img.icon src="resources/images/KanmonGG-icon.jpg"
+    img.icon src="resources/images/Gakufubako-icon.jpg"
