add link to for programmer

--- a/slides/index-2.slim
+++ b/slides/index-2.slim
@@ -6,7 +6,8 @@ h3.center ザキ研で想定している人材像とキャリアパス
 
 ol
   li
-    span.nonsplit.strong プログラマ志望
+    span.nonsplit.strong
+      a href="https://zackylab.github.io/research-introduction-2018/#/4" プログラマ志望
   li
     span.nonsplit.strong デザイナー志望
   li
