create & add for designer

--- a/slides/for-designer-1.slim
+++ b/slides/for-designer-1.slim
@@ -4,3 +4,16 @@ ul
   li デザイナーの仕事は見た目を整えるだけじゃない！
   li.strong 顧客の問題を解決することがデザイナーの仕事だ
   li.strong 顧客に「それ欲しかったんだよね！」と言わせたい！
+  li 大事な道具立て
+  ul
+    li
+      span.strong 観察とインタビュー
+      span 〜顧客に向かい合い，問題を発見する
+    li
+      span.strong 情報デザイン
+      span 〜情報を整理して見やすくわかりやすくする
+    li
+      span.strong ユーザビリティ評価
+      span 〜わかりやすいか，使い勝手が良いか，評価する
+  li
+  	span これらができた上で，美しく見た目を整えると効果的
