add link to for designer

--- a/slides/index-2.slim
+++ b/slides/index-2.slim
@@ -9,7 +9,8 @@ ol
     span.nonsplit.strong
       a href="https://zackylab.github.io/research-introduction-2018/#/4" プログラマ志望
   li
-    span.nonsplit.strong デザイナー志望
+    span.nonsplit.strong
+      a href="https://zackylab.github.io/research-introduction-2018/#/9" デザイナー志望
   li
     span.nonsplit.strong 起業家志望
   li
