--- a/slides/for-programmer-5.slim
+++ b/slides/for-programmer-5.slim
@@ -1,23 +1,13 @@
 h2 プログラマ志望のみなさんへ 
-h3 入門にあたっての課題 
+h3 ソフトウェア開発を支援するソフトウェア
 ul
-  li もちろんプログラミングできる必要があります
-  li 大事なこと
+  li アプリを開発するだけが問題解決ではない
+  li.strong アプリを効率良く開発できるようにすることも問題解決の1つ
+  li たとえばこんな研究事例がある
   ul
-    li
-      span.strong なぜそのようにプログラミングしたのか，
-      span 説明できること
-    li.strong 向上心
-  li 次の課題を用意しました。少なくとも1つ取り組んで提出してください
-  ol
-    li 今までに開発したプログラムを提出してください
-    ul
-      li 自作のものでもプログラミング演習でもOK
-      li 意図を説明するドキュメント・コメントも書いてください
-    li 別途指定する専門書を借りて読み，感想・疑問等を述べてください。
-    li
-      span.nonsplit
-        a href="https://elixirschool.com/ja/" Elixir School
-        span にしたがって，Elixir のプログラムを書いてください。
-      span.nonsplit （詳しくは別途教えますよ〜）
-      span.nonsplit その後，簡単なものでいいので何かプログラムを自作してください。
+    li.strong コラボレーションを円滑にする bot(ボット)
+    li.strong AIでプログラムコードの問題点を指摘
+    li.strong ソフトウェア開発工程の自動化
+  li
+    span このような支援により
+    span.strong ソフトウェア開発の効率が劇的に向上する
