update for programmer to modify excercises

--- a/slides/for-programmer-6.slim
+++ b/slides/for-programmer-6.slim
@@ -14,10 +14,8 @@ ul
     ul
       li 自作のものでもプログラミング演習でもOK
       li 意図を説明するドキュメント・コメントも書いてください
-    li 別途指定する専門書を借りて読み，感想・疑問等を述べてください。
+    li 別途指定する専門書を借りて読み，感想・疑問等を述べてください
     li
-      span.nonsplit
-        a href="https://elixirschool.com/ja/" Elixir School
-        span にしたがって，Elixir のプログラムを書いてください。
+      span.nonsplit チュートリアル・入門書に沿って Elixir のプログラムを書いてください
       span.nonsplit （詳しくは別途教えますよ〜）
-      span.nonsplit その後，簡単なものでいいので何かプログラムを自作してください。
+      span.nonsplit その後，簡単なものでいいので何かプログラムを自作してください
