update for designer to change description to making concept

--- a/slides/for-designer-1.slim
+++ b/slides/for-designer-1.slim
@@ -2,7 +2,9 @@ h2 デザイナー志望のみなさんへ
 h3 育てたいデザイナー像〜顧客に寄り添うデザイナー
 ul
   li デザイナーの仕事は見た目を整えるだけじゃない！
-  li.strong 顧客の問題を解決することがデザイナーの仕事だ
+  li
+    span 顧客がばくぜんと思い描く
+    span.strong コンセプトを形にすることがデザイナーの仕事
   li.strong 顧客に「それ欲しかったんだよね！」と言わせたい！
   li 大事な道具立て
   ul
