create for entrepreneur

--- a/css/source/theme.scss
+++ b/css/source/theme.scss
@@ -109,6 +109,11 @@ img.image {
 	margin: 30px !important;
 }
 
+img.image400 {
+	width: 400px;	
+	margin: 30px !important;
+}
+
 .middle img {
 	vertical-align: middle;
 }
