--- a/css/theme.css
+++ b/css/theme.css
@@ -54,6 +54,10 @@ img.image {
   width: 600px;
   margin: 30px !important; }
 
+img.image400 {
+  width: 400px;
+  margin: 30px !important; }
+
 .middle img {
   vertical-align: middle; }
 
