--- a/slides/index-2.slim
+++ b/slides/index-2.slim
@@ -12,7 +12,8 @@ ol
     span.nonsplit.strong
       a href="https://zackylab.github.io/research-introduction-2018/#/10" デザイナー志望
   li
-    span.nonsplit.strong 起業家志望
+    span.nonsplit.strong
+      a href="https://zackylab.github.io/research-introduction-2018/#/15" 起業家志望
   li
     span.nonsplit.strong 教師志望
   li
