--- a/slides/index-2.slim
+++ b/slides/index-2.slim
@@ -13,9 +13,10 @@ ol
       a href="https://zackylab.github.io/research-introduction-2018/#/10" デザイナー志望
   li
     span.nonsplit.strong
-      a href="https://zackylab.github.io/research-introduction-2018/#/15" 起業家志望
+      a href="https://zackylab.github.io/research-introduction-2018/#/15" 起業に興味がある
   li
-    span.nonsplit.strong 教師志望
+    span.nonsplit.strong
+      a href="https://zackylab.github.io/research-introduction-2018/#/18" 教育に興味がある
   li
     span.nonsplit.strong ゲームが好きだけど後ろめたく思う
   li
