--- a/slides/index-2.slim
+++ b/slides/index-2.slim
@@ -18,11 +18,14 @@ ol
     span.nonsplit.strong
       a href="https://zackylab.github.io/research-introduction-2018/#/18" 教育に興味がある
   li
-    span.nonsplit.strong ゲームが好きだけど後ろめたく思う
+    span.nonsplit.strong
+      a href="https://zackylab.github.io/research-introduction-2018/#/19" ゲームが好きだけど後ろめたく思う
   li
-    span.nonsplit.strong イベント企画・運営が楽しい
+    span.nonsplit.strong 
+      a href="https://zackylab.github.io/research-introduction-2018/#/23" イベント企画・運営が楽しい
   li
-    span.nonsplit.strong バンドが楽しい
+    span.nonsplit.strong
+      a href="https://zackylab.github.io/research-introduction-2018/#/25" バンドが楽しい
   li
     span.nonsplit.strong 創作活動が楽しい
   li
