--- a/slides/index-1.slim
+++ b/slides/index-1.slim
@@ -42,4 +42,5 @@ ul
   li
     span.nonsplit
       span そんな私は
-      span.strong Personal Vision Co-Creator
+      span.strong
+        a href="https://zacky1972.github.io/blog/2016/12/13/Personal-Vision-Co-Creator.html" Personal Vision Co-Creator
