add links to slides

--- a/slides/index-2.slim
+++ b/slides/index-2.slim
@@ -27,10 +27,13 @@ ol
     span.nonsplit.strong
       a href="https://zackylab.github.io/research-introduction-2018/#/25" バンドが楽しい
   li
-    span.nonsplit.strong 創作活動が楽しい
+    span.nonsplit.strong
+      a href="https://zackylab.github.io/research-introduction-2018/#/27" 創作活動が楽しい
   li
-    span.nonsplit.strong 地域の役に立ちたい  
+    span.nonsplit.strong
+      a href="https://zackylab.github.io/research-introduction-2018/#/28" 地域の役に立ちたい  
   li
-    span.nonsplit.strong 自分の未来に希望を持てない
+    span.nonsplit.strong
+      a href="https://zackylab.github.io/research-introduction-2018/#/29" 自分の未来に希望を持てない
   li
     span.nonsplit.strong やりたいことが見つからない
