add link to for students

--- a/slides/index-2.slim
+++ b/slides/index-2.slim
@@ -36,4 +36,5 @@ ol
     span.nonsplit.strong
       a href="https://zackylab.github.io/research-introduction-2018/#/29" 自分の未来に希望を持てない
   li
-    span.nonsplit.strong やりたいことが見つからない
+    span.nonsplit.strong
+      a href="https://zackylab.github.io/research-introduction-2018/#/31" やりたいことが見つからない
