update for designer

--- a/slides/for-designer-4.slim
+++ b/slides/for-designer-4.slim
@@ -3,4 +3,7 @@ h3 指導体制
 ul
   li.strong ザキ研顧問デザイナーの指導を受けられます
   li デザインの仕事をしながら学べる環境に身を置けます
-  
+  li デザインだけでなくマーケティングやデータの扱い方などを学ぶことができます
+  li
+  	span.nonsplit どんなデザイナーになると良いのかアドバイスをもらえます
+  	span.nonsplit （先輩の例：やさしいデザイナー）
