--- a/slides/for-designer-5.slim
+++ b/slides/for-designer-5.slim
@@ -4,11 +4,22 @@ ul
   li 大事なこと
   ul
     li
+      span 自分がやりたいことではなく，
+      span.strong お客様がどうなれば幸せになるのか
+      span を考えること
+    li
       span.strong なぜそのようにデザインしたのか，
       span 説明できること
+	  li トライアンドエラーを繰り返し，経験を積み上げ進化していくこと
   li 次の課題を用意しました
-  ol
-    li 作品を提出し，デザイン意図をプレゼンテーションしてください
+  ul
+    li
+      span.nonsplit 作品を提出してください
+      span.nonsplit 作品は絵でもウェブページでもアプリ構想でも何でもOK
+    li
+      span.nonsplit 次の点をプレゼンテーションしてください
+      span.nonsplit プレゼンテーションは口頭でも別途スライドを作ってもOK
     ul
-      li 作品は絵でもウェブページでもアプリ構想でも何でもOK
-    li プレゼンテーションは口頭でも別途スライドを作ってもOK
+      li 誰のためのデザインで，その人がどう幸せになるのか
+      li なぜそのようにデザインしたのか
+      li どのような試行錯誤をしたのか
